--- a/src/main/resources/static/user.css
+++ b/src/main/resources/static/user.css
@@ -1,17 +1,22 @@
 body {
-    padding-top: 50px;
-    background: linear-gradient(to bottom, #fffff0 0%, #fffff0 30%,#000000 30%,white 30%,white 100%);
+    /*background: linear-gradient(to bottom, #fffff0 0%, #fffff0 30%,#000000 30%,white 30%,white 100%);*/
+    padding:0;
+    margin:0;
     background-attachment:fixed;
     background-repeat: no-repeat;
-    position:fixed;
     line-height: 1.5;
-
     color: #24282a;
 }
 
+h1 {
+    padding-top: 175px;
+    padding-left: 390px;
+    height: 260px;
+    width: 100%;
+    margin:0;
+    background-color: #fffff0;
+}
 .index-body {
-    margin-top: 125px;
     padding-left: 100px;
-    paddin-top: 50px;
     text-align: left;
 }
