Commit: Create Profile Working

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -31,6 +31,10 @@
     <script th:inline="javascript">
         /*<![CDATA[*/
 
+        var failedLog = [[${session.failedlogin}]];
+            if (failedLog == true){
+                alert("Login failed.");
+            }
         var curuser = [[${session.currentUser}]]; //Your Thymleaf variable
             if(curuser != null)
             {
