--- a/src/main/resources/static/AdamMeetsEve.css
+++ b/src/main/resources/static/AdamMeetsEve.css
@@ -21,6 +21,17 @@ th{
     border-radius: 5px;
 }
 
+.modal-open {
+    overflow-y: scroll;
+}
+
+.barBtn  {
+    background-color: #ffa07a;
+    color: #ffffff;
+    border: 1px solid #ffffff;
+    border-radius: 5px;
+}
+
 #ameTbl {
     border-collapse:separate;
     border-spacing:10px 20px;
@@ -52,6 +63,17 @@ th{
 }
 
 #myModal {
+    display: none; /* Hidden by default */
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 30%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+}
+
+#searchModal {
     display: none; /* Hidden by default */
     position: fixed;
     top: 50%;
