Commit: Profile links working

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -31,7 +31,7 @@
     <script th:inline="javascript">
         /*<![CDATA[*/
 
-        var failedLog = [[${session.failedlogin}]];
+        var failed  Log = [[${failedlogin}]];
             if (failedLog == true){
                 alert("Login failed.");
             }
