--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -33,7 +33,7 @@
 <nav class="navbar navbar-expand-md fixed-top navbar-dark" div id="navbar">
     <a class="navbar-brand abs" th:href="@{/}">AdamMeetsEve</a>
     <ul class="navbar-nav ml-auto">
-        <button class="btn btn-outline-success my-2 my-sm-0" id="loginBtn" type="submit">Search</button>
+        <button class="btn btn-outline-success my-2 my-sm-0" id="loginBtn" type="submit">Find All Users</button>
         <button class="btn btn-outline-success my-2 my-sm-0" id="loginBtn" type="submit">Advanced Search</button>
         <form action="logout" th:action="@{/logout}" method="post">
             <button type="submit" button id="loginBtn" class="btn btn-info btn-md">Logout</button>
@@ -43,7 +43,7 @@
 
 
 </div>
-<h1>Welcome To placeholderID's profile page!</h1><br><br>
+<h1>Welcome To <span th:utext="${foundProfile.getProfileID()}"></span>'s profile page!</h1><br><br>
 
 
 <div class="container">
