Commit: Profile stuff

--- a/src/main/resources/static/AdamMeetsEve.css
+++ b/src/main/resources/static/AdamMeetsEve.css
@@ -21,6 +21,11 @@ th{
     border-radius: 5px;
 }
 
+#buttonpic{
+    height: 100%;
+    width: 100%;
+    object-fit: contain;
+}
 .modal-open {
     overflow-y: scroll;
 }
