--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -50,65 +50,84 @@
 
     <div class="index-body">
         <p class="lead">
-            <b>Name: Placeholder</b><br>
+            About <span th:utext="${foundProfile.getProfileID()}"></span>:
+        </p>
         <hr size="2">
-        Available Profiles:<br>
-        <!--
-                <input type="hidden" th:value="${session.currentUser.getSsn()}" name="ssn" id="ssn"/>
-                <table div id="infoTbl">
-                    <tr>
-                        <th><input type="text" div id="textBox" placeholder="New Profile ID" th:field="*{ProfileID}"/> Your New Profile ID</th>
-                    </tr>
-                    <tr>
-                        <th><input type="text" div id="textBox"placeholder="Your Age" th:field="*{age}"/> Your Age </th>
-                    </tr>
-                    <tr>
-                        <th><input type="text" div id="textBox" placeholder="Youngest Age You're Interested In Dating" th:field="*{RangeStart}"/>
-                            <input type="text" div id="textBox" placeholder="Oldest Age You're Interested In Dating" th:field="*{RangeEnd}"/>
-                            Youngest to Oldest Ages You'd Like to Date (ex: 20, 30)</th>
-                    </tr>
-                    <tr>
-                        <th><input type="text" div id="textBox" placeholder="Distance (in miles) you're willing to go for dates" th:field="*{GeoRange}"/>
-                            Distance In Miles You're Interested In For Dating (ex: 50)
-                        </th>
-                    </tr>
-                    <tr>
-                        <th>
-                            <select th:field="*{Gender}">
-                                <div>
-                                    <option disabled="true" selected="selected" value="">Your Gender</option>
-                                    <option value="Male">Male</option>
-                                    <option value="Female">Female</option>
-                                </div>
-                            </select>
-                            Your Gender:
-                        </th>
-                    </tr>
-                    <tr>
-                        <th><input type="text" div id="textBox" placeholder="Height (as decimal. 5'11 = 5.11)" th:field="*{Height}"/>
-                            Your Height (in decimals. If you're 5'8", type 5.8)
-                        </th>
-                    </tr>
-                    <tr>
-                        <th><input type="text" div id="textBox" placeholder="Weight in pounds" th:field="*{Weight}"/>
-                            Your Weight in Pounds (ex: 160)
-                        </th>
-                    </tr>
-                    <tr>
-                        <th><input type="text" div id="textBox" placeholder="Hair color" th:field="*{HairColor}"/>
-                            Your Hair Color (ex: Red)
-                        </th>
-                    </tr>
-                    <tr>
-                        <th><input type="text" div id="textBox" placeholder="Enter your hobbies!" th:field="*{Hobbies}"/>
-                            Your Hobbies!
-                        </th>
-                    </tr>
-                    <tr>
-                        <th><input type="submit" div id="button"/></th>
-                    </tr>
-                </table>
-                -->
+        <p>
+        Age: <span th:utext="${foundProfile.getAge()}"></span><br>
+        Gender: <span th:utext="${foundProfile.getMalefemale()}"></span><br>
+        Height: <span th:utext="${foundProfile.getHeight()}"></span><br>
+        Weight: <span th:utext="${foundProfile.getWeight()}"></span><br>
+        Hair Color: <span th:utext="${foundProfile.getHairColor()}"></span><br>
+        </p>
+        <hr size="2">
+        <p>
+            <div>
+            <span th:utext="${foundProfile.getProfileID()}"></span>'s Likes:
+            <button class="btn btn-default" data-toggle="collapse" data-target="#likes" div id="likesButton">
+                <img src="https://macho-men.com/wp-content/uploads/2016/01/cropped-heart.png" style="max-width: 12px; max-height: 12px; width: auto; height: auto;">
+            </button>
+            </div>
+            <div id="likes" class="collapse">
+            Likes placeholder
+            </div>
+
+            <!--
+                    <input type="hidden" th:value="${session.currentUser.getSsn()}" name="ssn" id="ssn"/>
+                    <table div id="infoTbl">
+                        <tr>
+                            <th><input type="text" div id="textBox" placeholder="New Profile ID" th:field="*{ProfileID}"/> Your New Profile ID</th>
+                        </tr>
+                        <tr>
+                            <th><input type="text" div id="textBox"placeholder="Your Age" th:field="*{age}"/> Your Age </th>
+                        </tr>
+                        <tr>
+                            <th><input type="text" div id="textBox" placeholder="Youngest Age You're Interested In Dating" th:field="*{RangeStart}"/>
+                                <input type="text" div id="textBox" placeholder="Oldest Age You're Interested In Dating" th:field="*{RangeEnd}"/>
+                                Youngest to Oldest Ages You'd Like to Date (ex: 20, 30)</th>
+                        </tr>
+                        <tr>
+                            <th><input type="text" div id="textBox" placeholder="Distance (in miles) you're willing to go for dates" th:field="*{GeoRange}"/>
+                                Distance In Miles You're Interested In For Dating (ex: 50)
+                            </th>
+                        </tr>
+                        <tr>
+                            <th>
+                                <select th:field="*{Gender}">
+                                    <div>
+                                        <option disabled="true" selected="selected" value="">Your Gender</option>
+                                        <option value="Male">Male</option>
+                                        <option value="Female">Female</option>
+                                    </div>
+                                </select>
+                                Your Gender:
+                            </th>
+                        </tr>
+                        <tr>
+                            <th><input type="text" div id="textBox" placeholder="Height (as decimal. 5'11 = 5.11)" th:field="*{Height}"/>
+                                Your Height (in decimals. If you're 5'8", type 5.8)
+                            </th>
+                        </tr>
+                        <tr>
+                            <th><input type="text" div id="textBox" placeholder="Weight in pounds" th:field="*{Weight}"/>
+                                Your Weight in Pounds (ex: 160)
+                            </th>
+                        </tr>
+                        <tr>
+                            <th><input type="text" div id="textBox" placeholder="Hair color" th:field="*{HairColor}"/>
+                                Your Hair Color (ex: Red)
+                            </th>
+                        </tr>
+                        <tr>
+                            <th><input type="text" div id="textBox" placeholder="Enter your hobbies!" th:field="*{Hobbies}"/>
+                                Your Hobbies!
+                            </th>
+                        </tr>
+                        <tr>
+                            <th><input type="submit" div id="button"/></th>
+                        </tr>
+                    </table>
+                    -->
         </p>
         <!--<button type="button" class="btn btn-dark btn-lg" div id="button" href="">Register</button>-->
     </div>
